--- a/css/styles.css
+++ b/css/styles.css
@@ -276,7 +276,7 @@ img {
   background-color: var(--button-hover);
 }
 
-/* modal form */
+/* modal */
 
 .backdrop {
   position: fixed;
@@ -298,6 +298,7 @@ img {
 
   width: 528px;
   height: 581px;
+  padding: 40px;
 
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -347,6 +348,10 @@ img {
 .btn-close {
   fill: currentColor;
 }
+
+/* form */
+
+
 
 /* section benefits */
 
