добавил ховер на кнопку закрытия модалки

--- a/css/styles.css
+++ b/css/styles.css
@@ -347,6 +347,12 @@ img {
 
 .btn-close {
   fill: currentColor;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover .btn-close,
+.modal-btn:focus .btn-close {
+  fill: var(--color-hover);
 }
 
 /* form */
