--- a/css/styles.css
+++ b/css/styles.css
@@ -1024,3 +1024,95 @@ img {
 .social-link-footer:focus {
   background-color: #2196f3;
 }
+
+/* subscribe */
+
+.subscribe {
+  margin-left: auto;
+}
+
+.text-subscribe {
+  display: inline-block;
+
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  margin-bottom: 20px;
+
+  color: var(--hero-text-color);
+}
+
+.subscribe-form {
+  display: flex;
+}
+
+.subscribe-label {
+  display: block;
+}
+
+.subscribe-input {
+  width: 358px;
+  height: 50px;
+
+  padding: 15px 16px;
+  margin-right: 12px;
+
+  background-color: #2f303a;
+  color: var(--hero-text-color);
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-input:hover,
+.subscribe-input:focus {
+  border: 1px solid var(--hero-text-color);
+}
+
+.btn-subscribe {
+  width: 200px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+
+  color: var(--hero-text-color);
+
+  padding: 10px 28px;
+
+  background-color: #2196f3;
+  border-width: 0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-subscribe:hover,
+.btn-subscribe:focus {
+  background-color: var(--button-hover);
+}
+
+.footer-btn-subscribe {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon-subscribe {
+  fill: currentColor;
+
+  margin-left: 10px;
+}
