--- a/css/styles.css
+++ b/css/styles.css
@@ -1061,7 +1061,7 @@ img {
   padding: 15px 16px;
   margin-right: 12px;
 
-  background-color: #2f303a;
+  background-color: transparent;
   color: var(--hero-text-color);
 
   border: 1px solid rgba(255, 255, 255, 0.3);
