--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,10 @@ img {
 }
 
 .navigation__item {
+  position: relative;
+}
+
+.navigation__item {
   margin-right: 50px;
 }
 
@@ -143,7 +147,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.navigation__list .navigation__link.current {
+.navigation__link--current {
   color: var(--color-hover);
 }
 
@@ -152,16 +156,12 @@ img {
   color: var(--color-hover);
 }
 
-.navigation__item {
-  position: relative;
-}
-
 .navigation__link {
   padding-top: 32px;
   padding-bottom: 32px;
 }
 
-.current::after {
+.navigation__link--current::after {
   position: absolute;
 
   content: '';
