--- a/css/styles.css
+++ b/css/styles.css
@@ -50,20 +50,13 @@ img {
   overflow: hidden;
 }
 
-.list-desk,
-.list-gallery,
-.list-team,
-.footer-contacts-list,
-.list-button,
-.list-card,
-.social-team,
-.social-footer,
-.social-list,
-.client {
-  list-style: none;
+.link {
+  text-decoration: none;
 }
 
-/* header */
+.list {
+  list-style: none;
+}
 
 .container {
   /* outline: 1px solid tomato; */
@@ -82,6 +75,8 @@ img {
   padding-bottom: 94px;
 }
 
+/* header */
+
 .header {
   background-color: #ffffff;
   border-bottom: 1px solid var(--border-color);
@@ -98,7 +93,6 @@ img {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  text-decoration: none;
 
   margin-right: 93px;
 }
@@ -115,8 +109,6 @@ img {
 
   padding: 0;
   margin: 0;
-
-  list-style: none;
 }
 
 .navigation__item {
@@ -138,7 +130,6 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  text-decoration: none;
 
   margin: 0;
   padding: 0;
@@ -179,8 +170,6 @@ img {
   display: flex;
 
   margin-left: auto;
-
-  list-style: none;
 }
 
 .header-contacts__item {
@@ -198,7 +187,6 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  text-decoration: none;
 
   align-items: center;
 
@@ -212,7 +200,6 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  text-decoration: none;
 
   align-items: center;
 
@@ -558,10 +545,10 @@ img {
 
   background-color: var(--color-hover);
   border-width: 0;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   cursor: pointer;
 }
@@ -569,28 +556,27 @@ img {
 .form-button:hover,
 .form-button:focus {
   background-color: var(--button-hover);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* section benefits */
 
-.section-benefits {
+.benefits-section {
   padding-bottom: 0;
 }
 
-.list-desk {
+.benefits__list {
   display: flex;
   justify-content: center;
 }
 
-.list-desk li:not(:last-child) {
+.benefits__item {
+  width: 270px;
+
   margin-right: 30px;
 }
 
-.list-desk li {
-  width: 270px;
-}
-
-.icon-benefits {
+.benefits__icon {
   display: flex;
   height: 120px;
   margin-bottom: 30px;
@@ -601,7 +587,7 @@ img {
   justify-content: center;
 }
 
-.subtitle {
+.benefits__subtitle {
   color: var(--link-color);
   font-weight: 700;
   font-size: 14px;
@@ -612,7 +598,7 @@ img {
   margin-bottom: 10px;
 }
 
-.text-subtitle {
+.benefits__text-subtitle {
   color: var(--color-text);
   font-size: 14px;
   line-height: 1.71;
@@ -621,7 +607,7 @@ img {
 
 /* section img */
 
-.subtitle-img {
+.gallery__subtitle {
   color: var(--link-color);
   font-weight: 700;
   font-size: 36px;
@@ -632,20 +618,24 @@ img {
   margin-bottom: 50px;
 }
 
-.list-gallery {
+.gallery__list {
   display: flex;
   justify-content: center;
 }
 
-.list-gallery li:not(:last-child) {
+.gallery__item {
   margin-right: 30px;
 }
 
-.item-gallery {
+.gallery__item:last-child {
+  margin-right: 0px;
+}
+
+.gallery__item {
   position: relative;
 }
 
-.text-gallery {
+.gallery__text {
   position: absolute;
 
   left: 0;
