--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,9 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
 
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   align-items: center;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -200,6 +203,9 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  padding-top: 32px;
+  padding-bottom: 32px;
 
   align-items: center;
 
@@ -882,6 +888,29 @@ img {
 
 .li-mail {
   margin-bottom: 9px;
+}
+
+/* scroll up */
+
+.scroll-up {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  width: 70px;
+  height: 70px;
+
+  background-color: rgba(255, 255, 255, 0.2);
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.scroll-icon {
+  fill: var(--color-hover);
+}
+
+.scroll-up:hover .scroll-icon {
+  fill: var(--button-hover);
 }
 
 /* portfolio */
